--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 	</parent>
 	<groupId>com.cloneCoin</groupId>
 	<artifactId>discoveryService</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+<!--	<version>0.0.1-SNAPSHOT</version>-->
+	<version>1.0</version>
 	<name>discoveryService</name>
 	<description>Demo project for MSA</description>
 	<properties>
