--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,11 @@ server:
 
 spring:
   application:
-    name: discoveryService
+    name: discovery-service
+
 eureka:
-  instance:
-    hostname: localhost
-  client:
-    registerWithEureka: false #gateway는 eureka에 등록할필요 없다. gateway는
-    fetchRegistry: false #gateway는 eureka가 찾을 필요 없다
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+ client:
+    registerWithEureka: false
+    fetchRegistry: false
+
+#test for jenkins
